--- a/app/src/main/res/layout/dialog_recupero_password.xml
+++ b/app/src/main/res/layout/dialog_recupero_password.xml
@@ -11,9 +11,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:gravity="center"
-        android:text="Recupero Password"
+        android:text="@string/dialog_password_1"
         android:textColor="@color/colorPrimary"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
     <LinearLayout
@@ -25,12 +25,12 @@
             android:id="@+id/textView38"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Seleziona università:"
+            android:text="@string/dialog_password_2"
             android:textSize="18sp" />
 
         <Spinner
             android:id="@+id/dialog_spinner_uni"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
     </LinearLayout>
@@ -39,7 +39,7 @@
         android:id="@+id/dialog_input_matricola"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="matricola"
+        android:hint="@string/dialog_password_3"
         android:inputType="textPersonName" />
 
     <EditText
@@ -47,8 +47,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
-        android:hint="mail di registrazione"
-        android:inputType="textPersonName" />
+        android:hint="@string/dialog_password_4"
+        android:inputType="textEmailAddress" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -64,7 +64,7 @@
             android:background="@drawable/button_layout"
             android:paddingLeft="50dp"
             android:paddingRight="50dp"
-            android:text="conferma" />
+            android:text="@string/dialog_password_5" />
     </LinearLayout>
 
 </LinearLayout>
