--- a/app/src/main/res/layout/activity_gestione_gruppi_dicente_frame_layout.xml
+++ b/app/src/main/res/layout/activity_gestione_gruppi_dicente_frame_layout.xml
@@ -15,35 +15,38 @@
 
         <Button
             android:id="@+id/btnAttivi"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#F6F4F4"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:text="Attivi"
+            android:text="@string/gestione_gruppi_docente_1"
             android:textColor="@color/button_text" />
 
         <Button
             android:id="@+id/btnInScadenza"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#F6F4F4"
             android:paddingLeft="3dp"
             android:paddingRight="3dp"
-            android:text="In scadenza"
+            android:text="@string/gestione_gruppi_docente_2"
             android:textColor="@color/button_text" />
 
         <Button
             android:id="@+id/btnScaduti"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#F6F4F4"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:text="Scaduti"
+            android:text="@string/gestione_gruppi_docente_3"
             android:textColor="@color/button_text" />
     </LinearLayout>
 
