--- a/app/src/main/res/layout/activity_group.xml
+++ b/app/src/main/res/layout/activity_group.xml
@@ -13,7 +13,7 @@
     <ListView
         android:id="@+id/listaGruppi"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:alpha="100"
         android:divider="#FAFAFA"
@@ -27,7 +27,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/button_layout"
-        android:text="Iscriviti ad un gruppo"
+        android:text="@string/activity_group_1"
         android:textColor="@color/button_text" />
 
     <LinearLayout
@@ -45,15 +45,16 @@
             android:id="@+id/imageView14"
             android:layout_width="25dp"
             android:layout_height="25dp"
+            android:contentDescription="@string/warning_img"
             app:srcCompat="@drawable/warning" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Impossibile contattare il server!\n I dati potrebbero non essere aggiornati!"
+            android:text="@string/warning_text"
             android:textColor="#EC0000"
             android:textSize="12sp" />
     </LinearLayout>
