--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         <ImageView
             android:id="@+id/imageView9"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/activity_registrazione_1" />
 
         <RadioGroup
             android:layout_width="match_parent"
@@ -31,14 +32,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="false"
-                android:text="@string/studente" />
+                android:text="@string/activity_registrazione_2" />
 
             <RadioButton
                 android:id="@+id/radioDocente"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="false"
-                android:text="Docente" />
+                android:text="@string/activity_registrazione_3" />
 
         </RadioGroup>
 
@@ -56,7 +57,7 @@
                     android:id="@+id/textView9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Seleziona universita:" />
+                    android:text="@string/activity_registrazione_4" />
 
                 <Spinner
                     android:id="@+id/log_spinner"
@@ -73,15 +74,16 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Inserisci matricola:" />
+                    android:text="@string/activity_main_1" />
 
                 <EditText
                     android:id="@+id/log_matricola"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
                     android:layout_weight="1"
-                    android:hint="matricola"
+                    android:hint="@string/activity_registrazione_18"
                     android:importantForAutofill="no"
                     android:inputType="textPersonName" />
             </TableRow>
@@ -94,16 +96,18 @@
                     android:id="@+id/textView11"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingRight="5dp"
-                    android:text="Inserisci password:" />
+                    android:layout_marginRight="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:text="@string/activity_main_2" />
 
                 <EditText
                     android:id="@+id/log_password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
                     android:layout_weight="1"
-                    android:hint="password"
+                    android:hint="@string/activity_registrazione_13"
                     android:importantForAutofill="no"
                     android:inputType="textPassword" />
 
@@ -121,7 +125,7 @@
             android:layout_marginRight="50dp"
             android:background="@drawable/button_layout"
             android:shadowColor="#FFFFFF"
-            android:text="Accedi"
+            android:text="@string/activity_main_3"
             android:textColor="@color/button_text" />
 
         <TextView
