--- a/app/src/main/res/layout/activity_prenotazioni_attive.xml
+++ b/app/src/main/res/layout/activity_prenotazioni_attive.xml
@@ -65,15 +65,16 @@
             android:id="@+id/imageView14"
             android:layout_width="25dp"
             android:layout_height="25dp"
+            android:contentDescription="@string/warning_img"
             app:srcCompat="@drawable/warning" />
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Impossibile contattare il server!\n I dati potrebbero non essere aggiornati!"
+            android:text="@string/warning_text"
             android:textColor="#EC0000"
             android:textSize="12sp" />
     </LinearLayout>
