--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -17,6 +17,7 @@
             android:id="@+id/img_registrazione"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:contentDescription="@string/activity_registrazione_1"
             app:srcCompat="@drawable/studente" />
 
         <RadioGroup
@@ -31,13 +32,13 @@
                 android:id="@+id/radioButton5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Studente" />
+                android:text="@string/activity_registrazione_2" />
 
             <RadioButton
                 android:id="@+id/radioButton6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Docente" />
+                android:text="@string/activity_registrazione_3" />
         </RadioGroup>
 
         <TableLayout
@@ -53,8 +54,9 @@
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
                     android:layout_marginRight="5dp"
-                    android:text="Seleziona università:" />
+                    android:text="@string/activity_registrazione_4" />
 
                 <Spinner
                     android:id="@+id/reg_universita"
@@ -72,15 +74,17 @@
                     android:id="@+id/textView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Inserisci matricola:*" />
+                    android:text="@string/activity_registrazione_5" />
 
                 <EditText
                     android:id="@+id/reg_matricola"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:hint="matricola"
+                    android:layout_marginStart="5dp"
                     android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:hint="@string/activity_registrazione_18"
+                    android:importantForAutofill="no"
                     android:inputType="textPersonName" />
             </TableRow>
 
@@ -92,15 +96,17 @@
                     android:id="@+id/textView5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Inserisci nome:" />
+                    android:text="@string/activity_registrazione_6" />
 
                 <EditText
                     android:id="@+id/reg_nome"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:hint="nome"
+                    android:layout_marginStart="5dp"
                     android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:hint="@string/activity_registrazione_7"
+                    android:importantForAutofill="no"
                     android:inputType="textPersonName" />
             </TableRow>
 
@@ -112,15 +118,17 @@
                     android:id="@+id/textView6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Inserisci cognome:" />
+                    android:text="@string/activity_registrazione_8" />
 
                 <EditText
                     android:id="@+id/reg_cognome"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:hint="cognome"
+                    android:layout_marginStart="5dp"
                     android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:hint="@string/activity_registrazione_9"
+                    android:importantForAutofill="no"
                     android:inputType="textPersonName" />
             </TableRow>
 
@@ -132,15 +140,17 @@
                     android:id="@+id/textView7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Inserisci e-mail:*" />
+                    android:text="@string/activity_registrazione_10" />
 
                 <EditText
                     android:id="@+id/reg_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:hint="e-mail"
+                    android:layout_marginStart="5dp"
                     android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:hint="@string/activity_registrazione_11"
+                    android:importantForAutofill="no"
                     android:inputType="textEmailAddress" />
 
             </TableRow>
@@ -153,15 +163,17 @@
                     android:id="@+id/textView8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Crea password:" />
+                    android:text="@string/activity_registrazione_12" />
 
                 <EditText
                     android:id="@+id/reg_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:hint="password"
+                    android:layout_marginStart="5dp"
                     android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:hint="@string/activity_registrazione_13"
+                    android:importantForAutofill="no"
                     android:inputType="textPassword" />
             </TableRow>
 
@@ -173,16 +185,19 @@
                     android:id="@+id/textView0"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
                     android:layout_marginRight="5dp"
-                    android:text="Conferma password:" />
+                    android:text="@string/activity_registrazione_14" />
 
                 <EditText
                     android:id="@+id/reg_password2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:hint="password"
+                    android:layout_marginStart="5dp"
                     android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:hint="@string/activity_registrazione_15"
+                    android:importantForAutofill="no"
                     android:inputType="textPassword" />
             </TableRow>
         </TableLayout>
@@ -194,7 +209,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginBottom="20dp"
             android:gravity="center_horizontal"
-            android:text="*Matricola ed e-mail universitarie"
+            android:text="@string/activity_registrazione_16"
             android:textSize="12sp" />
 
         <Button
@@ -205,7 +220,7 @@
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:background="@drawable/button_layout"
-            android:text="Registrati"
+            android:text="@string/activity_registrazione_17"
             android:textColor="@color/button_text" />
 
     </LinearLayout>
