--- a/app/src/main/res/layout/dialog_conferma_iscrizione.xml
+++ b/app/src/main/res/layout/dialog_conferma_iscrizione.xml
@@ -11,9 +11,11 @@
         android:id="@+id/close_dialog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
         android:layout_marginTop="7dp"
+        android:layout_marginEnd="3dp"
         android:layout_marginRight="3dp"
+        android:contentDescription="@string/icon"
         android:src="@drawable/ic_close_black_24dp" />
 
     <TextView
@@ -33,6 +35,7 @@
         android:id="@+id/imageView7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/icon"
         android:paddingTop="10dp"
         app:srcCompat="@drawable/nuovo_utente_al_gruppo" />
 
@@ -55,8 +58,9 @@
                     android:id="@+id/textView19"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
                     android:layout_marginRight="5dp"
-                    android:text="Gruppo:" />
+                    android:text="@string/dialog_iscrizione_1" />
 
                 <TextView
                     android:id="@+id/txt_iscr_gruppo"
@@ -73,8 +77,9 @@
                     android:id="@+id/textView33"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
                     android:layout_marginRight="5dp"
-                    android:text="Corso:" />
+                    android:text="@string/dialog_iscrizione_2" />
 
                 <TextView
                     android:id="@+id/txt_iscr_corso"
@@ -90,8 +95,9 @@
                     android:id="@+id/textView30"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
                     android:layout_marginRight="5dp"
-                    android:text="Docente:" />
+                    android:text="@string/dialog_iscrizione_3" />
 
                 <TextView
                     android:id="@+id/txt_iscr_docente"
@@ -111,20 +117,23 @@
 
         <Button
             android:id="@+id/conferma_dialog"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:width="100dp"
             android:background="@drawable/button_layout"
-            android:text="Conferma" />
+            android:text="@string/dialog_iscrizione_4" />
 
         <Button
             android:id="@+id/annulla_dialog"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:width="100dp"
             android:background="@drawable/button_layout"
-            android:text="Annulla" />
+            android:text="@string/dialog_iscrizione_5" />
     </LinearLayout>
 
 
