--- a/app/src/main/res/layout/dialog_crea_pdf.xml
+++ b/app/src/main/res/layout/dialog_crea_pdf.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:gravity="center_horizontal"
-        android:text="PDF"
+        android:text="@string/dialog_pdf_1"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -23,7 +23,7 @@
         android:layout_gravity="center"
         android:layout_marginBottom="10dp"
         android:gravity="center_horizontal"
-        android:text="Vuoi scaricare un Pdf con i codici appena creati?"
+        android:text="@string/dialog_pdf_2"
         android:textSize="18sp" />
 
     <LinearLayout
@@ -33,22 +33,25 @@
 
         <Button
             android:id="@+id/btnDialogPdfAnnulla"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
+            android:layout_gravity="start"
+            android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
             android:background="@drawable/button_layout"
-            android:text="Annulla" />
+            android:text="@string/dialog_pdf_3" />
 
         <Button
             android:id="@+id/btnDialogPdf"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:layout_weight="1"
             android:background="@drawable/button_layout"
-            android:text="Scarica" />
+            android:text="@string/dialog_pdf_4" />
 
     </LinearLayout>
 </LinearLayout>
