--- a/app/src/main/res/layout/dialog_mezzo_trasporto.xml
+++ b/app/src/main/res/layout/dialog_mezzo_trasporto.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Seleziona mezzo di trasporto"
+        android:text="@string/dialog_mezzo_1"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -29,12 +29,14 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="50dp"
             android:background="@drawable/layout_icona"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginEnd="50dp">
 
             <ImageView
                 android:id="@+id/img_car"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                android:contentDescription="@string/icon"
                 app:srcCompat="@drawable/auto" />
         </LinearLayout>
 
@@ -49,6 +51,7 @@
                 android:id="@+id/img_walk"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
+                android:contentDescription="@string/icon"
                 app:srcCompat="@drawable/walk" />
         </LinearLayout>
     </LinearLayout>
@@ -59,5 +62,5 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="@drawable/button_layout"
-        android:text="Inizia" />
+        android:text="@string/dialog_mezzo_2" />
 </LinearLayout>
