--- a/app/src/main/res/layout/dialog_qr_code.xml
+++ b/app/src/main/res/layout/dialog_qr_code.xml
@@ -10,7 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="TextView"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -20,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="Vuoi procedere?" />
+        android:text="@string/dialog_qr" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,18 +30,21 @@
 
         <Button
             android:id="@+id/btn_yes_qr"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_marginRight="50dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
             android:background="@drawable/button_layout"
-            android:text="si" />
+            android:text="@string/si" />
 
         <Button
             android:id="@+id/btn_no_qr"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/button_layout"
-            android:text="no" />
+            android:text="@string/no" />
     </LinearLayout>
 
 </LinearLayout>
