--- a/app/src/main/res/layout/dialog_seleziona_calendario.xml
+++ b/app/src/main/res/layout/dialog_seleziona_calendario.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:gravity="center_horizontal"
-        android:text="Seleziona Account"
+        android:text="@string/dialog_calendario_1"
         android:textColor="@color/colorPrimary"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -19,7 +19,7 @@
     <ListView
         android:id="@+id/lv_account"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_marginBottom="5dp"
         android:layout_weight="1"
         android:visibility="visible" />
@@ -31,20 +31,23 @@
 
         <Button
             android:id="@+id/btn_account_conferma"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:layout_weight="1"
             android:background="@drawable/button_layout"
-            android:text="Conferma" />
+            android:text="@string/dialog_calendario_2" />
 
         <Button
             android:id="@+id/btn_account_indietro"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/button_layout"
-            android:text="annulla" />
+            android:text="@string/dialog_calendario_3" />
     </LinearLayout>
 
 </LinearLayout>
