--- a/app/src/main/res/layout/row_layout_componenti.xml
+++ b/app/src/main/res/layout/row_layout_componenti.xml
@@ -11,14 +11,16 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="5dp"
         android:textColor="@android:color/tertiary_text_dark"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_marginEnd="5dp" />
 
     <TextView
         android:id="@+id/txtNomeComponente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="5dp"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_marginEnd="5dp" />
 
     <TextView
         android:id="@+id/txtCognomeComponente"
