--- a/app/src/main/res/layout/row_layout_dialog_calendario.xml
+++ b/app/src/main/res/layout/row_layout_dialog_calendario.xml
@@ -6,7 +6,7 @@
 
     <CheckBox
         android:id="@+id/check_account"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1" />
 
