--- a/app/src/main/res/layout/row_layout_fasce_disponibili.xml
+++ b/app/src/main/res/layout/row_layout_fasce_disponibili.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_weight="1"
-        android:text="CheckBox" />
+        android:text="@string/check" />
 
     <Spinner
         android:id="@+id/spinnerTavoli"
