--- a/app/src/main/res/layout/row_layout_group_activity.xml
+++ b/app/src/main/res/layout/row_layout_group_activity.xml
@@ -4,21 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:background="@drawable/layout_gruppo_complete"
-    android:orientation="horizontal">
+    android:gravity="center_vertical"
+    android:orientation="horizontal"
+    android:padding="5dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="10dp"
+        android:orientation="vertical"
+        android:layout_marginStart="10dp">
 
         <ImageView
             android:id="@+id/imageView10"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:contentDescription="gruppi_di_utenti_img"
+            android:contentDescription="@string/icon"
             app:srcCompat="@drawable/gruppi_di_utenti" />
 
     </LinearLayout>
@@ -26,6 +31,8 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="15dp"
         android:layout_marginLeft="15dp"
         android:layout_weight="1"
         android:orientation="vertical">
