--- a/app/src/main/res/layout/row_layout_home.xml
+++ b/app/src/main/res/layout/row_layout_home.xml
@@ -11,13 +11,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginEnd="10dp">
 
         <ImageView
             android:id="@+id/row_image_home"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginTop="25dp"
+            android:contentDescription="@string/icon"
             app:srcCompat="@android:drawable/star_big_on" />
     </LinearLayout>
 
@@ -30,33 +32,28 @@
             android:id="@+id/nomeAula_home"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
             android:textSize="16sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/luogoAula_home"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/postiLiberi_home"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/statoAula_home"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/flagGruppi_home"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </LinearLayout>
