--- a/app/src/main/res/layout/row_layout_home_docente.xml
+++ b/app/src/main/res/layout/row_layout_home_docente.xml
@@ -43,12 +43,14 @@
             android:layout_height="match_parent"
             android:layout_marginRight="10dp"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginEnd="10dp">
 
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:contentDescription="@string/icon"
                 app:srcCompat="@drawable/group" />
         </LinearLayout>
 
@@ -67,7 +69,7 @@
                     android:id="@+id/textView40"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Gruppi totali: "
+                    android:text="@string/row_home_docente_1"
                     android:textColor="#203CD3" />
 
                 <TextView
@@ -86,7 +88,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="in scadenza: "
+                    android:text="@string/row_home_docente_2"
                     android:textColor="#F19100" />
 
                 <TextView
@@ -106,7 +108,7 @@
                     android:id="@+id/textView45"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="scaduti: "
+                    android:text="@string/row_home_docente_3"
                     android:textColor="#FF0000" />
 
                 <TextView
