--- a/app/src/main/res/layout/row_layout_prenotazioni_attive_activity.xml
+++ b/app/src/main/res/layout/row_layout_prenotazioni_attive_activity.xml
@@ -16,8 +16,9 @@
             android:id="@+id/textView20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
-            android:text="Aula:"
+            android:text="@string/row_pren_attive_1"
             android:textColor="#000000" />
 
         <TextView
@@ -36,8 +37,9 @@
             android:id="@+id/textView29"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
-            android:text="Inizio:"
+            android:text="@string/row_pren_attive_2"
             android:textColor="#000000" />
 
         <TextView
@@ -56,8 +58,9 @@
             android:id="@+id/textVew35"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
-            android:text="Fine:"
+            android:text="@string/row_pren_attive_3"
             android:textColor="#000000" />
 
         <TextView
@@ -76,8 +79,9 @@
             android:id="@+id/textView31"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
-            android:text="Gruppo:"
+            android:text="@string/row_pren_attive_4"
             android:textColor="#000000" />
 
         <TextView
@@ -96,8 +100,9 @@
             android:id="@+id/textView34"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
-            android:text="Stato:"
+            android:text="@string/row_pren_attive_5"
             android:textColor="#000000" />
 
         <TextView
