--- a/app/src/main/res/layout/row_layout_scegli_gruppo.xml
+++ b/app/src/main/res/layout/row_layout_scegli_gruppo.xml
@@ -11,7 +11,9 @@
         android:id="@+id/imgGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
+        android:contentDescription="@string/icon"
         app:srcCompat="@drawable/gruppi_di_utenti" />
 
     <TextView
