--- a/app/src/main/res/layout/toast_success.xml
+++ b/app/src/main/res/layout/toast_success.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:id="@+id/txt_toast"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="center"
